sw file path name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://pawan8tech.github.io/pwa",
+  "homepage": "https://pawan8tech.github.io/.",
   "name": "pwa",
   "version": "0.1.0",
   "private": true,
